testcases/error/too_large_number.veryl
module too_large_number {
    const a: u32 = 1'd10;
}
